--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> the bristol student housing guide
+  <title> The bristol student housing guide
   </title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>
-      the bristol student housing guide
+      The bristol student housing guide
     </h1>
     <h3>
       how to house hunt with success!
