--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
 </head>
 <body>
+  <nav class="navbar navbar-inverse  navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+      </div>
+      </div>
+      </nav>
   <header>
     <h1>
       The bristol student housing guide
