--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div class="navbar-header">
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
-        <form class="navbar-form navbar-left" role="search">
+        <form class="navbar-form navbar-left pull right" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">        
+            <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
