--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="navbar-header">
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
-        <form class="navbar-form navbar-left pull right" role="search">
+        <form class="navbar-form navbar-left pull-right" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
         </div>
