--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> The bristol student housing guide
+  <title> The Bristol Student Housing Guide
   </title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,6 +11,12 @@
   <nav class="navbar navbar-inverse  navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
+        <ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul> 
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
         <form class="navbar-form navbar-left pull-right" role="search">
@@ -24,10 +30,10 @@
       </nav>
   <header>
     <h1>
-      The bristol student housing guide
+      The Bristol Student Housing Guide
     </h1>
     <h3>
-      how to house hunt with success!
+      How to house hunt with success!
     </h3>
   </header>
 </body>
