--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 initial-scale=1.0">
 </head>
 <body>
-  <nav class="navbar navbar-inverse  navbar-fixed-top">
+  <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
         <ul>
