--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ initial-scale=1.0">
   <li><a href="contact.asp">Contact</a></li>
   <li><a href="about.asp">About</a></li>
 </ul>
+ </div>
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
       </div>
       </div>
       </div>
