--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ initial-scale=1.0">
 </ul>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+   <form class="navbar-form navbar-left" role="search">
+     <div class="form-group">
+       <input type="text" class="form-control" placeholder="Search">
+   </div>
+   <button type="submit" class="btn btn-default">Submit</button>
+ </form> 
       </div>
       </div>
       </div>
