--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ initial-scale=1.0">
       <div class="navbar-header">
         <ul>
   <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href="How to Find a House.asp">News</a></li>
+  <li><a href="Other Advice.asp">Contact</a></li>
+  <li><a href="contact.asp">About</a></li>
 </ul>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
