--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ initial-scale=1.0">
     <div class="container">
       <div class="navbar-header">
         <ul>
-  <li><a href="default.asp">Home</a></li>
+  <li><a href="Home.asp">Home</a></li>
   <li><a href="Finding a House.asp">Finding a House</a></li>
   <li><a href="Advice.asp">Advice</a></li>
-  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="Contact.asp">Contact</a></li>
 </ul>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
