--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ initial-scale=1.0">
       How to house hunt with success!
     </h3>
   </header>
+  <h2>
+    <p>Finding a House</p>
+    <p>Advice</p>
+    <p>Contact<p/>
+  </h2>
 </body>
-<h2>
-  Finding a House
-  Advice
-  Contact
-</h2>
 </html>
