--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ initial-scale=1.0">
     <div class="container">
       <div class="navbar-header">
         <ul>
-  <li><a href="Finding a House.asp">Finding a House</a></li>
-  <li><a href="Advice.asp">Advice</a></li>
-  <li><a href="Contact.asp">Contact</a></li>
+  <li><a href="Finding a House">Finding a House</a></li>
+  <li><a href="Advice">Advice</a></li>
+  <li><a href="Contact">Contact</a></li>
 </ul>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
