--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ initial-scale=1.0">
     <div class="container">
       <div class="navbar-header">
         <ul>
-  <li> <a name="Finding a House">Finding a House</a> </li>
-  <li> <a name="Advice">Advice</a> </li>
-  <li> <a name="Contact">Contact</a> </li>
+  <li> <a href=""="Finding a House">Finding a House</a> </li>
+  <li> <a href=""="Advice">Advice</a> </li>
+  <li> <a href="Contact">Contact</a> </li>
 </ul>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
@@ -32,9 +32,9 @@ initial-scale=1.0">
     </h3>
   </header>
   <h2>
-    <p>Finding a House</p>
-    <p>Advice</p>
-    <p>Contact<p/>
+    <a>Finding a House</a>
+    <a>Advice</a>
+    <a>Contact<a/>
   </h2>
 </body>
 </html>
