--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@ initial-scale=1.0">
     </h3>
   </header>
   <h2>
+    <div class="w3-container">
     <p>Finding a House</p>
+  </div>
+  <div class="w3-container">
     <p>Advice</p>
+  </div>
+  <div class="w3-container">
     <p>Contact<p/>
+    </div>
   </h2>
 </body>
 </html>
