--- a/index.html
+++ b/index.html
@@ -32,9 +32,34 @@ initial-scale=1.0">
     </h3>
   </header>
   <h2>
-    <a>Finding a House</a>
-    <a>Advice</a>
-    <a>Contact<a/>
+    <p><a>Finding a House</a></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    <p><a>Advice</a></p>
+    <p><a>Contact</a></p>
   </h2>
 </body>
 </html>
