--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ initial-scale=1.0">
     <div class="container">
       <div class="navbar-header">
         <ul>
-  <li> <a href=""="Finding a House">Finding a House</a> </li>
-  <li> <a href=""="Advice">Advice</a> </li>
+  <li> <a href"Finding a house"=>Finding a House</a> </li>
+  <li> <a href="Advice">Advice</a> </li>
   <li> <a href="Contact">Contact</a> </li>
 </ul>
  </div>
