--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
     <div class="container">
       <div class="navbar-header">
         <ul>
-  <li> <a href"Finding a house"=>Finding a House</a> </li>
+  <li> <a href="Finding a house">Finding a House</a> </li>
   <li> <a href="Advice">Advice</a> </li>
   <li> <a href="Contact">Contact</a> </li>
 </ul>
@@ -40,6 +40,10 @@ initial-scale=1.0">
   </div>
   <div class="w3-container">
     <p>Contact<p/>
+       <div id=”social-buttons”>
+         <button class=”btn btn-lg btn-twitter”>Twitter</button>    
+         <button class=”btn btn-lg btn-facebook”>Facebook</button>
+         <button class=”btn btn-lg btn-pinterest”>Pinterest</button>  </div>
     </div>
   </h2>
 </body>
