--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@ initial-scale=1.0">
   </div>
   <div class="w3-container">
     <p>Contact<p/>
+    </div>  <form role='form'>
+      <label for="Contact">Find out more</label>
+      <input type="text" name="Contact" >      
+      <button class="btn btn-success" type="submit">Send</button>
+    </form> </div>
+
        <div id=”social-buttons”>
-         <button class=”btn btn-lg btn-twitter”>Twitter</button>    
+         <button class=”btn btn-lg btn-twitter”>Twitter</button>
          <button class=”btn btn-lg btn-facebook”>Facebook</button>
          <button class=”btn btn-lg btn-pinterest”>Pinterest</button>  </div>
     </div>
