--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@ initial-scale=1.0">
   </div>
   <div class="w3-container">
     <p>Contact<p/>
-    </div>  <form role='form'>
+    </div>
+    <form role='form'>
       <label for="Contact">Find out more</label>
-      <input type="text" name="Contact" >      
+      <input type="text" name="Contact" >
       <button class="btn btn-success" type="submit">Send</button>
     </form> </div>
 
