--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@ initial-scale=1.0">
   <div class="w3-container">
     <p>Contact<p/>
     </div>
-    <form role='form'>
+    <p><form role='form'>
       <label for="Contact">Find out more</label>
       <input type="text" name="Contact" >
       <button class="btn btn-success" type="submit">Send</button>
-    </form> </div>
+    </form>
+  </div></p>
 
        <div id=”social-buttons”>
          <button class=”btn btn-lg btn-twitter”>Twitter</button>
