--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@ initial-scale=1.0">
   <div class="w3-container">
     <p>Contact<p/>
     </div>
+    <h4>
     <p><form role='form'>
-      <label for="Contact">Find out more</label>
-      <input type="text" name="Contact" >
+      <label for="Email">Contact Us</label>
+      <input type="text" name="Email" >
       <button class="btn btn-success" type="submit">Send</button>
     </form>
-  </div></p>
+  </div></p></h4>
 
        <div id=”social-buttons”>
          <button class=”btn btn-lg btn-twitter”>Twitter</button>
