--- a/index.html
+++ b/index.html
@@ -31,23 +31,32 @@ initial-scale=1.0">
       How to house hunt with success!
     </h3>
   </header>
+  <body>
   <h2>
+
     <div class="w3-container">
     <p>Finding a House</p>
   </div>
-  <div class="w3-container">
+    <p>
+  Use Rightmove Students to search for properties advertised by landlords and letting agents.
+  <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a>
+    </p>
+
+  <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
     <p>Advice</p>
   </div>
+
   <div class="w3-container">
     <p>Contact<p/>
     </div>
+
     <h4>
-    <p><form role='form'>
+    <form role='form'>
       <label for="Email">Contact Us</label>
       <input type="text" name="Email" >
       <button class="btn btn-success" type="submit">Send</button>
     </form>
-  </div></p></h4>
+  </div></h4>
 
        <div id=”social-buttons”>
          <button class=”btn btn-lg btn-twitter”>Twitter</button>
