--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ initial-scale=1.0">
     <div class="w3-container">
     <p>Finding a House</p>
   </div>
-    <p>
-  Use Rightmove Students to search for properties advertised by landlords and letting agents.
-  <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a>
-    </p>
+    <h4><p>
+  Use <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a> to search for properties advertised by landlords and letting agents.
+
+</h4></p>
 
   <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
     <p>Advice</p>
