--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@ initial-scale=1.0">
     </h3>
   </header>
   <body>
-  <h2>
 
+    <h2>
     <div class="w3-container">
     <p>Finding a House</p>
   </div>
+</h2>
     <h4><p>
   Use <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a> to search for properties advertised by landlords and letting agents.
-
 </h4></p>
 
-  <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
+<h2>  <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
     <p>Advice</p>
   </div>
+</h2>
 
-  <div class="w3-container">
+
+  <h2><div class="w3-container">
     <p>Contact<p/>
     </div>
+  </h2>
 
     <h4>
     <form role='form'>
