--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ initial-scale=1.0">
 </h2>
     <h4><p>
   Use <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a> to search for properties advertised by landlords and letting agents.
-Use the <a href="http://www.bristol.ac.uk/accommodation/privately-rented/finding-privately-rented-accommodation/bulletin-board.html">UoB bulletin board</a> or <a href="https://www.facebook.com/groups/237366726805558/">this facebook page</a> to find people looking for a housemate.
-</h4></p>
+</p><p>Use the <a href="http://www.bristol.ac.uk/accommodation/privately-rented/finding-privately-rented-accommodation/bulletin-board.html">UoB bulletin board</a> or <a href="https://www.facebook.com/groups/237366726805558/">this facebook page</a> to find people looking for a housemate.
+</p></h4>
 
 <h2>  <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
     <p>Advice</p>
