--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href='css/bootstrap.css' rel='stylesheet'>
    <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-inverse">
