just a few formatting changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ initial-scale=1.0">
     <h1>
       The Bristol Student Housing Guide
     </h1>
-    <h3>
+    <h3 class= head>
       How to house hunt with success!
     </h3>
   </header>
@@ -37,19 +37,27 @@ initial-scale=1.0">
     <h2>
     <div class="w3-container">
     <p>Finding a House</p>
-  </div>
 </h2>
   <h4>
-  <blockquote>Use <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a> to search for properties advertised by landlords and letting agents.</blockquote>
-<blockquote>Use the <a href="http://www.bristol.ac.uk/accommodation/privately-rented/finding-privately-rented-accommodation/bulletin-board.html">UoB bulletin board</a> or <a href="https://www.facebook.com/groups/237366726805558/">this facebook page</a> to find people looking for housemates.</blockquote>
-<blockquote>Contact the univeristy accommodation office about <a href="http://www.bristol.ac.uk/accommodation/current/undergraduate/returners/">returning to halls of residence</a> or <a href="http://www.bristol.ac.uk/accommodation/current/senior-residents/">apply to become a senior resident</a>.</blockquote>
+    <blockquote>
+      Use <a href="https://www.rightmove.co.uk/student-accommodation/Bristol.html">Rightmove Students</a> to search for properties advertised by landlords and letting agents. <br />
+      Use the <a href="http://www.bristol.ac.uk/accommodation/privately-rented/finding-privately-rented-accommodation/bulletin-board.html">UoB bulletin board</a> or <a href="https://www.facebook.com/groups/237366726805558/">this facebook page</a> to find people looking for housemates. <br />
+      Contact the univeristy accommodation office about <a href="http://www.bristol.ac.uk/accommodation/current/undergraduate/returners/">returning to halls of residence</a> or <a href="http://www.bristol.ac.uk/accommodation/current/senior-residents/">apply to become a senior resident</a>.
+    </blockquote>
 </h4>
+</div>
 
-<h2>  <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
+<h2>
+ <div class="w3-container">
     <p>Advice</p>
-  </div>
-</h2>
+  </h2>
+  <h4>
+<blockquote>
+  Don't get exploited
 
+</blockquote>
+</h4>
+  </div>
 
   <h2><div class="w3-container">
     <p>Contact<p/>
@@ -58,7 +66,7 @@ initial-scale=1.0">
 
     <h4>
     <form role='form'>
-      <label for="Email">Contact Us</label>
+      <label for="Email">Contact us</label>
       <input type="text" name="Email" >
       <button class="btn btn-success" type="submit">Send</button>
     </form>
