--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ initial-scale=1.0">
   </h2>
   <h4>
 <blockquote>
-  Don't get exploited
+  Don't get exploited! The <a href="http://www.bristol.ac.uk/accommodation/privately-rented/advice/">Accommodation Office</a> has some helpful advice in making sure you are getting a fair deal with your tenancy, and what to do in the case of conflicts with the landlord. <br />
+
 
 </blockquote>
 </h4>
@@ -75,7 +76,9 @@ initial-scale=1.0">
        <div id=”social-buttons”>
          <button class=”btn btn-lg btn-twitter”>Twitter</button>
          <button class=”btn btn-lg btn-facebook”>Facebook</button>
-         <button class=”btn btn-lg btn-pinterest”>Pinterest</button>  </div>
+         <button class=”btn btn-lg btn-pinterest”>Pinterest</button>
+       </div>
+
     </div>
   </h2>
 </body>
