--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <title> The Bristol Student Housing Guide
   </title>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link href='css/bootstrap.css' rel='stylesheet'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
 </head>
+
 <body>
   <nav class="navbar navbar-inverse">
-    <div class="container">
+    <div class="container-fluid">
       <div class="navbar-header">
         <ul>
   <li> <a href="Finding a house">Finding a House</a> </li>
@@ -24,6 +25,7 @@ initial-scale=1.0">
       </div>
       </div>
       </nav>
+
   <header>
     <h1>
       The Bristol Student Housing Guide
@@ -32,8 +34,8 @@ initial-scale=1.0">
       How to house hunt with success!
     </h3>
   </header>
-  <body>
 
+  <body>
     <h2>
     <div class="w3-container">
     <p>Finding a House</p>
@@ -54,11 +56,31 @@ initial-scale=1.0">
   <h4>
 <blockquote>
   Don't get exploited! The <a href="http://www.bristol.ac.uk/accommodation/privately-rented/advice/">Accommodation Office</a> has some helpful advice in making sure you are getting a fair deal with your tenancy, and what to do in the case of conflicts with the landlord. <br />
-
+  Picking housemates: it's important to take your time with this. Estate agents <a href="https://student-cribs.com/en/blog/45/Picking-Housemates-at-Uni-The-Good-The-Bad-and-The-Awkward/">Student Cribs</a> have a good guide as to what to look for! <br />
 
 </blockquote>
 </h4>
   </div>
+  <div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Know Your Rights</h3>
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Housemates</h3>
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Bills</h3>
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
+    </div>
+  </div>
+</div>
+
 
   <h2><div class="w3-container">
     <p>Contact<p/>
