Style and content
Added to both style and content. Is now responsive on smaller screen. However I can't figure out how to make the nav bar fill the whole top of the screen?

--- a/index.html
+++ b/index.html
@@ -53,35 +53,24 @@ initial-scale=1.0">
  <div class="w3-container">
     <p>Advice</p>
   </h2>
-  <h4>
-<blockquote>
-  Don't get exploited! The <a href="http://www.bristol.ac.uk/accommodation/privately-rented/advice/">Accommodation Office</a> has some helpful advice in making sure you are getting a fair deal with your tenancy, and what to do in the case of conflicts with the landlord. <br />
-  Picking housemates: it's important to take your time with this. Estate agents <a href="https://student-cribs.com/en/blog/45/Picking-Housemates-at-Uni-The-Good-The-Bad-and-The-Awkward/">Student Cribs</a> have a good guide as to what to look for! <br />
-
-</blockquote>
-</h4>
   </div>
   <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <h3>Know Your Rights</h3>
-      <p>Lorem ipsum dolor..</p>
-      <p>Ut enim ad..</p>
+      <p>Don't get exploited! The <a href="http://www.bristol.ac.uk/accommodation/privately-rented/advice/">Accommodation Office</a> has some helpful advice in making sure you are getting a fair deal with your tenancy, and what to do in the case of conflicts with the landlord.</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <h3>Housemates</h3>
-      <p>Lorem ipsum dolor..</p>
-      <p>Ut enim ad..</p>
+      <p>Picking housemates: it's important to take your time with this. Estate agents <a href="https://student-cribs.com/en/blog/45/Picking-Housemates-at-Uni-The-Good-The-Bad-and-The-Awkward/">Student Cribs</a> have a good guide as to what to look for! </p>
+      <br />
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <h3>Bills</h3>
-      <p>Lorem ipsum dolor..</p>
-      <p>Ut enim ad..</p>
+      <p>If your bills aren't included with your property, be sure to look at sites like <a href="https://www.moneysavingexpert.com/broadband-and-mobile/">Moneysavingexpert</a> and <a href="https://www.comparethemarket.com">Compare the Market</a> for the best deals. Be sure to look out for deals offered especially to students!</p>
     </div>
   </div>
 </div>
-
-
   <h2><div class="w3-container">
     <p>Contact<p/>
     </div>
