--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@ initial-scale=1.0">
 </h4>
 
 <h2>  <div class="w3https://www.rightmove.co.uk/student-accommodation/Bristol.html-container">
-    <p>Advice</p>
+    <p><h2>Advice</h2></p>
+    <h4>
+      <ul>
+          <li> Don't panic! Houses are released in batches; November/December, and January/February. If you don't get a house before christmas, there is still time in the new year. </li>
+            <li> To avoid conflict pick housemates you match well with! Budget, noisiness, tidiness, and heating requirements are important! </li>
+              <li> Location, location location! Decide how long a walk (or bus journey) you are willing to take every day to campus! Houses further out may be cheaper, but is that worth the queue for a bus, or a 50 minute walk in the rain? </li>
+</ul>
   </div>
 </h2>
 
