--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@ initial-scale=1.0">
     <div class="container-fluid">
       <div class="navbar-header">
         <ul>
-  <li> <a href="Finding a house">Finding a House</a> </li>
-  <li> <a href="Advice">Advice</a> </li>
-  <li> <a href="Contact">Contact</a> </li>
+  <li> <a href="index.html">Homepage</a> </li>
+  <li> <a href="about.html">About</a> </li>
 </ul>
  </div>
  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
