--- a/about.html
+++ b/about.html
@@ -11,7 +11,36 @@ initial-scale=1.0">
 </head>
 
 <body>
-  <h1>
-  Why did we do this?
-  </h1>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <ul>
+  <li> <a href="index.html">Homepage</a> </li>
+  <li> <a href="about.html">About</a> </li>
+</ul>
+ </div>
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+      </div>
+      </div>
+      </nav>
+
+  <header>
+    <h1>
+      The Bristol Student Housing Guide
+    </h1>
+    <h3 class= head>
+      How to house hunt with success!
+    </h3>
+  </header>
+
+  <body>
+    <h2>
+    <div class="w3-container">
+    <p>Finding a House</p>
+</h2>
+  <h4>
+    <blockquote>
+      Why did we do this?
+    </blockquote>
+</h4>
 </body>
