--- a/about.html
+++ b/about.html
@@ -36,11 +36,11 @@ initial-scale=1.0">
   <body>
     <h2>
     <div class="w3-container">
-    <p>Finding a House</p>
+    <p>About This Website</p>
 </h2>
   <h4>
     <blockquote>
-      Why did we do this?
+    This website aims to be a useful resource for students house hunting in Bristol. Both of us have found it a hugely stressful process at university, and wanted to create a space with a collation of useful links and ideas.
     </blockquote>
 </h4>
 </body>
