--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@ initial-scale=1.0">
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
       <div class="navbar-header">
         <ul>
   <li> <a href="index.html">Homepage</a> </li>
