added a very useful quote

--- a/about.html
+++ b/about.html
@@ -42,5 +42,11 @@ initial-scale=1.0">
     <blockquote>
     This website aims to be a useful resource for students house hunting in Bristol. Both of us have found it a hugely stressful process at university, and wanted to create a space with a collation of useful links and ideas.
     </blockquote>
+    
+    <blockquote class=quote>
+      "The Bristol Student Housing Guide helped me so much- what would I have done without it?!" <br />
+      - random student
+    </blockquote>
+
 </h4>
 </body>
