--- a/about.html
+++ b/about.html
@@ -36,13 +36,17 @@ initial-scale=1.0">
   <body>
     <h2>
     <div class="w3-container">
-    <p>About This Website</p>
+    <p>About This Website <br />
+      <h4 class=names>
+      created by Kate Newby and Adelaide Shaw.
+    </h4>
+    </p>
 </h2>
   <h4>
     <blockquote>
     This website aims to be a useful resource for students house hunting in Bristol. Both of us have found it a hugely stressful process at university, and wanted to create a space with a collation of useful links and ideas.
     </blockquote>
-    
+
     <blockquote class=quote>
       "The Bristol Student Housing Guide helped me so much- what would I have done without it?!" <br />
       - random student
